--- a/client/src/components/LandingPage/ListItem/ListItem.css
+++ b/client/src/components/LandingPage/ListItem/ListItem.css
@@ -1,5 +1,8 @@
 .listItem {
-    margin: 3% 35%;
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-top: 25%;
+    margin-bottom: 25%;
 }
 
 .card-header {
